...
        contentView.layer.maskedCorners = [.layerMinXMinYCorner, .layerMaxXMinYCorner]
    }

    // MARK: - Public Methods

    func setupFirstComponent(title: String, iconSymbol: String, identifier: DashboardModels.MenuOption, delegate: FeatureComponentDelegate?) {
        firstComponentView?.setup(title: title, iconSymbol: iconSymbol, identifier: identifier, delegate: delegate, accessibilityIdentifier: "FeaturesTableViewCell-FeatureComponentView-1")
    }

    func setupSecondComponent(title: String, iconSymbol: String, identifier: DashboardModels.MenuOption, delegate: FeatureComponentDelegate?) {
        secondComponentView?.setup(title: title, iconSymbol: iconSymbol, identifier: identifier, delegate: delegate, accessibilityIdentifier: "FeaturesTableViewCell-FeatureComponentView-2")
    }

    func setupThirdComponent(title: String, iconSymbol: String, identifier: DashboardModels.MenuOption, delegate: FeatureComponentDelegate?) {
        thirdComponentView?.setup(title: title, iconSymbol: iconSymbol, identifier: identifier, delegate: delegate, accessibilityIdentifier: "FeaturesTableViewCell-FeatureComponentView-3")
    }

...
