...
        tableView?.register(headerType: TitleHeaderView.self)
        tableView?.register(cellType: PatientTableViewCell.self)
        tableView?.register(cellType: SearchBarTableViewCell.self)
        tableView?.register(cellType: FilterTableViewCell.self)
        tableView?.register(cellType: EmptyStateTableViewCell.self)

        tableView?.accessibilityIdentifier = "PatientsViewController-tableView"
    }

    // MARK: - Public Methods

    func setupArchitecture(interactor: PatientsLogic, router: PatientsRouter) {
        self.interactor = interactor
...
                    return UITableViewCell()
                }

                cell.setup(title: LocalizedTable.newCgaEmptyState.localized,
                           buttonTitle: LocalizedTable.newCgaEmptyStateAction.localized)

                cell.accessibilityIdentifier = "PatientsViewController-EmptyStateTableViewCell"

                return cell
            }
        default:
            return UITableViewCell()
        }
...
