...

        title = LocalizedTable.cgas.localized

        tabBarController?.tabBar.isHidden = navigationController?.viewControllers.first != self
        tableView?.reloadData()

        tableView?.accessibilityIdentifier = "CGAsViewController-tableView"
    }

    func presentDeletionAlert(for indexPath: IndexPath) {
        let alert = UIAlertController(title: LocalizedTable.deleteCGAQuestion.localized,
                                      message: LocalizedTable.deleteCGADescription.localized, preferredStyle: .alert)
        let deleteAction = UIAlertAction(title: LocalizedTable.deleteCGA.localized, style: .destructive) { _ in
...
                return UITableViewCell()
            }

            cell.setup(title: LocalizedTable.cgasEmptyState.localized,
                       buttonTitle: LocalizedTable.cgasEmptyStateAction.localized)

            cell.accessibilityIdentifier = "CGAsViewController-EmptyStateTableViewCell"

            return cell
        }

        guard let cellViewModel, let cell = tableView.dequeueReusableCell(withIdentifier: CGATableViewCell.className,
                                                                          for: indexPath) as? CGATableViewCell else {
...
